# rhythmbox

./: .cvsignore  .gdbinit  .gitignore  .gitlab-ci.yml  .vimspector.json  AUTHORS  COPYING  CVS-SURGERY  ChangeLog  ChangeLog.old  ChangeLog.pre-0.12  ChangeLog0.6  ChangeLog0.7  ChangeLog0.7.old  DOCUMENTERS  HACKING  INSTALL  INSTALL.quick  INTERNALS  MAINTAINERS  MAINTAINERS.old  Makefile.am  NEWS  README  README.daap  README.iPod  README.lirc  README.md  THANKS  TODO  acconfig.h  autogen.sh  check-news.sh  config.h.meson  configure.ac  configure.in  index.html  meson.build  meson_options.txt  omf.make  (+12 more)
backends/: Makefile.am  meson.build  rb-encoder.c  rb-encoder.h  rb-player-gst-data-tee.c  rb-player-gst-data-tee.h  rb-player-gst-filter.c  rb-player-gst-filter.h  rb-player-gst-tee.c  rb-player-gst-tee.h  rb-player.c  rb-player.h
component/: .cvsignore  Makefile.am  Rhythmbox_Nautilus_Context_Menu.server.in.in  libmain.c  rb-nautilus-context-menu.c  rb-nautilus-context-menu.h
corba/: .cvsignore  Makefile.am  Rhythmbox.idl  test-corba.c
corelib/: Makefile.am
daapsharing/: .cvsignore  Makefile.am  rb-daap-connection.c  rb-daap-connection.h  rb-daap-dialog.c  rb-daap-dialog.h  rb-daap-hash.c  rb-daap-hash.h  rb-daap-marshal.list  rb-daap-mdns-browser-avahi.c  rb-daap-mdns-browser-howl.c  rb-daap-mdns-browser.h  rb-daap-mdns-publisher-avahi.c  rb-daap-mdns-publisher-howl.c  rb-daap-mdns-publisher.h  rb-daap-mdns.c  rb-daap-mdns.h  rb-daap-share.c  rb-daap-share.h  rb-daap-sharing.c  rb-daap-sharing.h  rb-daap-src.c  rb-daap-src.h  rb-daap-structure.c  rb-daap-structure.h
data/: .cvsignore  GNOME_Rhythmbox.server.in  GNOME_Rhythmbox_Shell.server.in  Makefile.am  generate-keys.sh  iradio-initial.pls  iradio-initial.xml  meson.build  org.gnome.Rhythmbox.service.in  org.gnome.Rhythmbox3.appdata.xml.in  org.gnome.Rhythmbox3.desktop.in  org.gnome.Rhythmbox3.desktop.in.in  org.gnome.Rhythmbox3.device.desktop.in  org.gnome.Rhythmbox3.device.desktop.in.in  org.gnome.Rhythmbox3.metainfo.xml.in  org.gnome.Rhythmbox3.service.in  org.gnome.rhythmbox.gschema.xml  playlists.xml.in  rhythmbox-client.1  rhythmbox-device.desktop.in.in  rhythmbox.1  rhythmbox.appdata.xml.in  rhythmbox.applications  rhythmbox.desktop.in  rhythmbox.desktop.in.in  rhythmbox.gep  rhythmbox.pc.in  rhythmbox.schemas
doc/: internals.md  lirc_example  meson.build  plugin-examples.md  plugin-guide.md  rhythmbox.toml.in  urlmap.js
help/: .cvsignore  ChangeLog  LINGUAS  Makefile.am  meson.build  rhythmbox.omf.in
iradio/: .cvsignore  Makefile.am  TODO  rb-iradio-backend.c  rb-iradio-backend.h  rb-iradio-station.c  rb-iradio-station.h  rb-iradio-yp-iterator.c  rb-iradio-yp-iterator.h  rb-iradio-yp-xmlfile.c  rb-iradio-yp-xmlfile.h  rb-new-station-dialog.c  rb-new-station-dialog.h  rb-node-station.c  rb-node-station.h  rb-station-properties-dialog.c  rb-station-properties-dialog.h
lib/: .cvsignore  Makefile.am  disclosure-widget.c  disclosure-widget.h  e-splash.c  e-splash.h  eel-gconf-extensions.c  eel-gconf-extensions.h  eggdesktopfile.c  eggdesktopfile.h  eggsequence.c  eggsequence.h  eggsmclient-xsmp.c  eggtrayicon.c  getstr.c  gseal-gtk-compat.h  gsequence.c  gsequence.h  md5.c  md5.h  meson.build  mkdtemp.c  mkdtemp.h  rb-async-copy.c  rb-async-copy.h  rb-async-queue-watch.c  rb-async-queue-watch.h  rb-atomic.c  rb-atomic.h  rb-bonobo-helpers.c  rb-bonobo-helpers.h  rb-builder-helpers.c  rb-builder-helpers.h  rb-chunk-loader.c  rb-chunk-loader.h  rb-cut-and-paste-code.c  rb-cut-and-paste-code.h  rb-debug.c  rb-debug.h  rb-dialog.c  (+55 more)
metadata/: .cvsignore  Makefile.am  meson.build  rb-ext-db-key.c  rb-ext-db-key.h  rb-ext-db.c  rb-ext-db.h  rb-metadata-common.c  rb-metadata-dbus-client.c  rb-metadata-dbus-service.c  rb-metadata-dbus.c  rb-metadata-dbus.h  rb-metadata-gst-common.c  rb-metadata-gst-common.h  rb-metadata-gst.c  rb-metadata-mm.c  rb-metadata-xine.c  rb-metadata.h  sj-error.c  sj-error.h  sj-metadata-musicbrainz.c  sj-metadata-musicbrainz.h  sj-metadata.c  sj-metadata.h  sj-structures.c  sj-structures.h  test-metadata.c
monkey-media/: .cvsignore  Makefile.am  monkey-media-audio-cd-private.h  monkey-media-audio-cd.c  monkey-media-audio-cd.h  monkey-media-audio-quality.c  monkey-media-audio-quality.h  monkey-media-includes.h.in  monkey-media-marshal.list  monkey-media-musicbrainz.c  monkey-media-musicbrainz.h  monkey-media-player-gst-old.c  monkey-media-player-gst-tmp.c  monkey-media-player-gst.c  monkey-media-player-xine.c  monkey-media-player.h  monkey-media-private.h  monkey-media-stream-info.c  monkey-media-stream-info.h  monkey-media.c  monkey-media.h  sha1.c  sha1.h
player/: .arch-inventory  .cvsignore  Makefile.am  rb-player-xine.c  rb-recorder-gst.c  rb-recorder-marshal.list  rb-recorder-xine.c  rb-recorder.h
plugins/: Makefile.am  meson.build  rb-module.c  rb-module.h  rb-plugin-macros.h  rb-plugin-manager.c  rb-plugin-manager.h  rb-plugin.c  rb-plugin.h  rb-plugins-engine.c  rb-plugins-engine.h  rb-python-module.c  rb-python-module.h  rb-python-plugin.c  rb-python-plugin.h
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  az.po  be.po  be@latin.po  bg.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  (+52 more)
podcast/: .cvsignore  Makefile.am  meson.build  npapi.h  npupp.h  rb-feed-podcast-properties-dialog.c  rb-feed-podcast-properties-dialog.h  rb-new-podcast-dialog.c  rb-new-podcast-dialog.h  rb-podcast-add-dialog.c  rb-podcast-add-dialog.h  rb-podcast-entry-types.c  rb-podcast-entry-types.h  rb-podcast-main-source.c  rb-podcast-main-source.h  rb-podcast-manager.c  rb-podcast-manager.h  rb-podcast-marshal.list  rb-podcast-parse.c  rb-podcast-parse.h  rb-podcast-properties-dialog.c  rb-podcast-properties-dialog.h  rb-podcast-search-itunes.c  rb-podcast-search-miroguide.c  rb-podcast-search.c  rb-podcast-search.h  rb-podcast-settings.h  rb-podcast-source.c  rb-podcast-source.h  (+5 more)
(+1605 files in other folders)
